--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,58 @@
+anyio==3.6.1
+asgiref==3.5.2
+atomicwrites==1.4.1
+attrs==22.1.0
+CacheControl==0.12.12
+cachy==0.3.0
+certifi==2022.6.15.1
+charset-normalizer==2.1.1
+cleo==1.0.0a5
+click==8.1.3
+colorama==0.4.5
+crashtest==0.3.1
+distlib==0.3.6
+dulwich==0.20.46
 fastapi==0.70.0
-uvicorn==0.15.0
-SQLAlchemy
+filelock==3.8.0
+greenlet==1.1.3
+h11==0.13.0
+html5lib==1.1
+idna==3.3
+iniconfig==1.1.1
+jaraco.classes==3.2.2
+jsonschema==4.16.0
+keyring==23.9.1
+more-itertools==8.14.0
+msgpack==1.0.4
+packaging==21.3
+pexpect==4.8.0
+pkginfo==1.8.3
+platformdirs==2.5.2
+pluggy==1.0.0
+poetry==1.2.0
+poetry-core==1.1.0
+poetry-plugin-export==1.0.6
+psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+py==1.11.0
+pydantic==1.10.2
+pylev==1.4.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
 pytest==6.2.5
-requests
-poetry
-pydantic
+pywin32-ctypes==0.2.0
+requests==2.28.1
+requests-toolbelt==0.9.1
+shellingham==1.5.0
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+SQLAlchemy-Utils==0.38.3
+starlette==0.16.0
+toml==0.10.2
+tomlkit==0.11.4
+typing_extensions==4.3.0
+urllib3==1.26.12
+uvicorn==0.15.0
+virtualenv==20.16.5
+webencodings==0.5.1
