--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^1.8.2"
 SQLAlchemy = "^1.4.28"
 psycopg2-binary = "^2.9.2"
 SQLAlchemy-Utils = "^0.37.9"
+alembic = "^1.8.1"
 
 
 [build-system]
